--- a/about-us.html
+++ b/about-us.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hakkımızda</title>
+    <link rel="stylesheet" href="muzik.css">
+</head>
+<body>
+<!-- Navbar Start -->
+<h1>Müzik Dükkanım</h1>
+<div style="display:inline-block; text-decoration:underline">
+    <a href="index.html">Ana Sayfa</a>
 
+</div>
+    <div style="display:inline-block; text-decoration:underline">
+    <a href="product.html">Ürünlerimiz</a>
+
+</div>
+<div style="display:inline-block; text-decoration:underline">
+    <a href="about-us.html">Hakkımızda</a>
+</div>
+
+<!-- Navbar End -->
+
+<h2>Hakkımızda</h2>
+<!-- Content Start -->
+<!-- Article Start -->
+<p style="text-align:left">Müzik Dükkanımız 2022 yılında Pınar Mamat tarafından kuruldu.</p>
+
+<h3 style="text-align:left;">Vizyonumuz</h3>
+<p style="text-align:left;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus ut libero minima labore excepturi aliquid aut inventore sint omnis accusamus voluptates mollitia eveniet, eos voluptatem explicabo nostrum. Exercitationem omnis facilis fugit ad enim, error incidunt corporis ab quasi, architecto aliquam quis debitis labore numquam provident.</p>
+
+<h3 style="text-align:left;">Misyonumuz</h3>
+<p style="text-align:left;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam earum neque voluptas nostrum libero harum accusantium, architecto eos, odio natus recusandae, sequi facere dolore voluptatum saepe quisquam? Molestiae labore, repellat possimus cumque sint aliquid ducimus numquam voluptas nisi earum impedit hic, consectetur, commodi quisquam. Optio obcaecati minus vero quo accusamus, qui deserunt enim. Quo quis optio sapiente consequuntur libero temporibus quidem ipsum perferendis. Quia, inventoore.</p>
+
+<!-- Article End -->
+<!-- Content End -->
+</body>
+</html>
