--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Müzik Dükkanım</title>
+    <link rel="stylesheet" href="muzik.css">
+
+</head>
+<body>
+<!-- Navbar Start -->
+<h1>Müzik Dükkanım</h1>
+<div style="display:inline-block; text-decoration:underline">
+    <a href="index.html">Ana Sayfa</a>
+
+</div>
+    <div style="display:inline-block; text-decoration:underline">
+    <a href="product.html">Ürünlerimiz</a>
+
+</div>
+<div style="display:inline-block; text-decoration:underline">
+    <a href="about-us.html">Hakkımızda</a>
+</div>
+
+<!-- Navbar End -->
+
+<h2>Ana Sayfa</h2>
+
+<!-- Content Start -->
+<!-- Article Start -->
+
+<p>Müzik dükkanım sitesine hoş geldiniz! Bu sitede çeşitli müzik aletlerini bulabilirsiniz. Uygun fiyatlı ve kaliteli ürünlerimiz için <a href="product.html">Ürünlerimiz</a> sayfasını ziyeret edebilirsiniz.
+</p> 
+<h3>Sitemizde Bulunan Müzik Aletleri</h3>
+<ul style="list-style-position:inside">
+<li>Keman</li>
+<li>Gitar</li>
+<li>Cello</li>
+<li>Piyano</li>
+<li>Saksafon</li>
+
+</ul>
+
+<!-- Article End -->
+<!-- Content End -->
+
+
+<!-- Footer Start -->
+<!-- Footer End -->
+
+    
+</body>
+</html>
+
 
